--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,182 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "Helvetica Neue", sans-serif;
 }
 
 .body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
+    height: 100vh;
+    background-image: url("../img/1.jpg");
+}
+
+.form-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 360px;
+    height: 420px;
+    padding: 80px 40px 40px 40px;
+    background-color: #f3f8f4;
+    box-shadow: 1px 6px 65px rgba(0, 0, 0, 0.22);
+    box-sizing: border-box;
+    opacity: 0.8;
+    position: relative;
+    animation: formTransform 2s linear;
+}
+
+.logo-wrap {
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    top: -50px;
+    background: #ffffff;
+    box-shadow: 1px 6px 24px rgba(0, 0, 0, 0.07);
+    border-radius: 10px;
+}
+
+.form-title {
+    color: #000000;
+    font-size: 30px;
+    font-weight: 300;
+}
+
+.form-subtitle {
+    opacity: 0.5;
+    color: #000000;
+    font-size: 15px;
+}
+
+.square {
+    height: 25px;
+    width: 25px;
+    border-radius: 5px;
+    opacity: 0.9;
+    position: absolute;
+    animation: squareOpacity 1.7s linear;
+
+}
+
+.square:nth-child(1) {
+    background: #f8911d;
+    top: 15px;
+    left: 30px;
+    animation: squareTransit 1s linear;
+    animation-delay: 500ms;
+}
+
+.square:nth-child(2) {
+    background: #d1369c;
+    top: 30px;
+    right: 30px;
+    z-index: 1;
+    animation: squareTransit 1s linear;
+    animation-delay: 600ms;
+}
+
+.square:nth-child(3) {
+    background: #3e9ffd;
+    bottom: 35px;
+    left: 30px;
+    animation: squareTransit 1s linear;
+    animation-delay: 700ms;
+}
+
+.square:nth-child(4) {
+    background: #4ebf49;
+    bottom: 20px;
+    right: 30px;
+    z-index: 1;
+    animation: squareTransit 1s linear;
+    animation-delay: 800ms;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
     height: 100%;
-    /*background: url("../img/4.jpg") no-repeat center center fixed;*/
-    background-size: cover;
-    /*background: black;*/
+}
+
+.input {
+    display: flex;
+    margin: auto;
+    width: 280px;
+    height: 40px;
+    box-sizing: border-box;
+    border: 1px solid #636363;
+    background-color: #ffffff;
+    padding-left: 10px;
+}
+
+.input:focus {
+    box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.39);
+    border: 2px solid #3e9ffd;
+}
+
+.checkbox-wrap {
+    display: flex;
+}
+
+.checkbox-lbl {
+    color: #636363;
+    font-size: 13px;
+    margin-left: 10px;
+}
+
+.btn {
+    height: 40px;
+    margin-top: 40px;
+    background-color: #3e9ffd;
+    color: #ffffff;
+    font-size: 16px;
+    border: none;
+}
+
+@keyframes squareOpacity {
+    0% {
+        opacity: 0;
+    }
+    99% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0.9;
+    }
+}
+
+@keyframes squareTransit {
+    0% {
+        top: -20px;
+        opacity: 0;
+    }
+    100% {
+        top: 0;
+        opacity: 0.9;
+    }
+}
+
+@keyframes formTransform {
+    0% {
+        transform-origin: top;
+        transform: rotateX(-80deg);
+        opacity: 0;
+    }
+    50% {
+        transform-origin: top;
+        transform: rotateX(-40deg);
+        opacity: 0.7;
+    }
+    75% {
+        transform-origin: top;
+        transform: rotateX(20deg);
+        opacity: 1;
+    }
+    100% {
+        transform-origin: top;
+        transform: rotate(0deg);
+    }
 }
